--- a/src/main/resources/templates/route-not-found.html
+++ b/src/main/resources/templates/route-not-found.html
@@ -2,19 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title th:text="${routeModel.name}">A route</title>
+
 </head>
 
 <body>
 
     <header>
-        <h1 th:text="${routeModel.name}">A route</h1>
+        <h1>You have been Grounded!</h1>
+        <h2>There is no route found</h2>
     </header>
 
     <main>
-
-        <h3 th:text="${routeModel.grade}"></h3>
-        <p th:text="${routeModel.description}"></p>
+        <p>You must seek another rock.</p>
     </main>
 
     <footer>
