--- a/src/main/resources/templates/route-template.html
+++ b/src/main/resources/templates/route-template.html
@@ -8,19 +8,18 @@
 <body>
 
     <header>
-        <h1 th:text="${route.name}">A route</h1>
+        <h1 th:text="${routeModel.name}">A route</h1>
     </header>
 
     <main>
-        <ol>
-            <li><a href="/routes">routes</a></li>
-            <li th:text="${routeModel.name}"></li>
-        </ol>
-        <h2 th:text="${route.description}"></h2>
+
+        <h3 th:text="${routeModel.grade}"></h3>
+        <p th:text="${routeModel.description}"></p>
     </main>
 
     <footer>
-        <small>Copyright South Harmon Institute of Technology 2018</small>
+        <div><a href="/show-routes">Routes</a></div>
+        <small>A Bootcamp Project by Caleb Stripes using Spring Framework</small>
     </footer>
 
 </body>
