--- a/src/main/resources/templates/route-template.html
+++ b/src/main/resources/templates/route-template.html
@@ -14,6 +14,7 @@
     <main>
 
         <h3 th:text="${routeModel.grade}"></h3>
+        <img th:src="${routeModel.img}" />
         <p th:text="${routeModel.description}"></p>
     </main>
 
